# CompilationWinter2018

./: .gitignore  CMakeLists.txt  README.md
HW1/: a.out  hw1.l  hw11.l  selfcheck-hw1
HW1/better_tests/: t1.in  t1.out  t1.res
HW1/eitan/: .nfs0000000005afe10c0000011d  .nfs000000000e7aeb28000000f5  a.out  eit  hw1.lex  lex.yy.c  self_check  t1.in  t1b.out  t2.in  t2b.out  template.l  template.lex  test  test.in  test.out  test.res
HW1/maxtests/: t1.in  t1.out  t1.res  t2.in  t2.out
HW1/tests/: t1.out  t1.res  t2.out
HW2/: HW2.sln  grammar.cpp  hw2.cpp  lexer.lex
HW2/HW2/: HW2.vcxproj  HW2.vcxproj.filters  our_select
HW3/: lexer.lex  selfcheck-hw3
HW3/HW3/: StackStructs.h  StackStructs.hpp  lexer.lex  parser.ypp  scanner.lex  symbolTable.cpp  symbolTable.hpp  test.in
HW4/: front_page.docx  hw4.docx  q3 by eitan.docx  ~$hw4.docx  ~WRL0049.tmp  ~WRL0709.tmp  ~WRL2548.tmp
HW5/: StackStructs.h  hw5.hpp  parser.ypp  scanner.lex  symbolTable.cpp  symbolTable.hpp  test111.in
HW5/TestAccessories/: add_main_to_tests.tcl  generate_test_outputs.tcl  make_generate_test_outputs.tcl  run_tests.tcl  test10.in  test10.out  test22.in  test22.out  test23.in  test23.out  test3.in  test3.out  test31.in  test31.out  test32.in  test33.in  test33.out  test34.in  test34.out  test35.in  test35.out  test37.in  test37.out  test42.in  test46.in  test46.out  test49.in  test49.out  test50.in  test50.out  test55.in  test56.in  test59.in  test63.in  test63.out  test70.in  test70.out  test73.in  test73.out  test8.in  (+3 more)
HW5/gal_nir_files/: attributes.h  parser.ypp  scanner.lex  symbolTable.cpp  symbolTable.hpp  wellsee.hpp
HW5/other_tests/: regression.tcl  t12.in  t12.out  t18.in  t18.out  t19.in  t19.out  t20.in  t20.out  t21.in  t21.out  t22.in  t22.out  t23.in  t23.out  t24.in  t24.out  (+31 more)
(+217 files in other folders)
